--- a/package.json
+++ b/package.json
@@ -12,13 +12,17 @@
     "html-webpack-plugin": "^2.30.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-redux": "^5.0.6",
     "react-router": "^4.2.0",
+    "redux": "^1.0.0-rc",
+    "redux-devtools": "^3.4.1",
     "webpack-config": "^7.5.0",
     "webpack-dev-server": "^2.9.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.2.1",
     "babel-cli": "^6.26.0",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
     "css-loader": "^0.28.7",
     "node-sass": "^4.7.2",
