--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-redux": "^5.0.6",
-    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "redux": "^1.0.0-rc",
     "redux-devtools": "^3.4.1",
     "webpack-config": "^7.5.0",
