--- a/package.json
+++ b/package.json
@@ -13,10 +13,12 @@
     "isomorphic-fetch": "^2.2.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-form": "^2.14.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
     "redux": "^1.0.0-rc",
     "redux-devtools": "^3.4.1",
+    "redux-form": "^7.2.0",
     "webpack-config": "^7.5.0",
     "webpack-dev-server": "^2.9.5"
   },
