--- a/private/package.json
+++ b/private/package.json
@@ -11,9 +11,18 @@
   "license": "ISC",
   "dependencies": {
     "aws-sdk": "^2.162.0",
+    "body-parser": "^1.18.2",
+    "cheerio": "^1.0.0-rc.2",
     "express": "^4.16.2",
     "nconf": "^0.9.1",
+    "needle": "^2.1.2",
+    "passport": "^0.4.0",
+    "passport-facebook": "^2.1.1",
+    "passport-google-auth": "^1.0.2",
+    "passport-google-oauth": "^1.0.0",
+    "passport-google-oauth2": "^0.1.6",
     "path": "^0.12.7",
+    "telegram-node-bot": "^4.0.5",
     "winston": "^2.4.0"
   },
   "devDependencies": {
