--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  "presets": ["es2015", "flow", "react"],
+  "presets": ["es2015", "flow", "react", "stage-0"],
   "plugins": [
     "react-hot-loader/babel",
     "transform-object-rest-spread"
