--- a/package.json
+++ b/package.json
@@ -10,15 +10,19 @@
     "babel-preset-react": "^6.24.1",
     "flow": "^0.2.3",
     "html-webpack-plugin": "^2.30.1",
+    "immutable": "^3.8.2",
     "isomorphic-fetch": "^2.2.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-form": "^2.14.1",
     "react-redux": "^5.0.6",
     "react-router-dom": "^4.2.2",
-    "redux": "^1.0.0-rc",
+    "redux": "^3.7.0",
     "redux-devtools": "^3.4.1",
     "redux-form": "^7.2.0",
+    "reselect": "^3.0.1",
+    "reselector": "^0.8.2",
     "webpack-config": "^7.5.0",
     "webpack-dev-server": "^2.9.5"
   },
@@ -27,6 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-flow": "^6.23.0",
+    "babel-preset-stage-0": "^6.24.1",
     "css-loader": "^0.28.7",
     "node-sass": "^4.7.2",
     "postcss-loader": "^2.0.9",
