--- a/private/package.json
+++ b/private/package.json
@@ -29,6 +29,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "nodemon": "^1.12.1",
     "react-hot-loader": "^3.0.0",
     "webpack-dev-middleware": "^1.12.2",
